--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ruiling Yuan"
   avatar           : "profile.png"
-  bio              : "Graduate student in Control Science and Engineering" "Bachelor of Engineering in Automation"
+  bio              : "Graduate student in Control Science and Engineering, Bachelor of Engineering in Automation"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
